--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -5,7 +5,7 @@
 }
 body {
     color: navajowhite;
-    font-family: fantasy;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 /* header/ nav bar styles start */
 header {
@@ -21,7 +21,7 @@ header h1 {
 }
 header a {
     text-decoration: none;
-    color: navajowhite;
+    color: whitesmoke;
 }
 header nav {
     float: right;
