--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -36,3 +36,65 @@ header nav ul li a {
     font-size: 22px;
 }
 /* header/ nav bar styles end */
+
+/* style all section tags */
+section {
+    padding: 60px;
+}
+/* hero styles start */
+.hero {
+    background-image: url(../images/hero-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: cornsilk;
+    font-style: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2 {
+    font-style: italic;
+    font-style: 55px;
+    color: lime;
+}
+.hero-form {
+    border: 3px solid lavender;
+    background-color: darkmagenta;
+    padding: 20px;
+    color: lightcyan;
+    width: 40%;
+    margin: 3.5%;
+}
+.hero-form h3 {
+    font-size: 24px;
+    margin: 0;
+}
+.hero-form p {
+    margin: 5px 0 15px 0;
+}
+.form-input {
+    border: 1px solid olive;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: darkgreen;
+    width: 100%;
+    margin-bottom: 15px;
+}
+.hero-form label {
+    margin: 0 5px;
+}
+.hero-form button {
+    color: darkblue;
+    background-color: lightblue;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+/* hero styles end */
