--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -274,3 +274,24 @@ section {
 .flex-row {
     display: flex;
 }
+/* footer style start */
+footer {
+    background-color: purple;
+    padding: 40px 35px;
+    width: 100%;
+}
+footer h2 {
+    display: inline;
+    color:lightcyan;
+    font-style: 30px;
+    margin: 0;
+}
+footer div {
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+footer a {
+    color: lightblue;
+}
+/* end footer style */
